# dump-decls

./: .gitignore  Main.hs  README.md  build-hls.nix  build-it.sh  build.ghc94.nix  build.ghc96.nix  build.ghc98.nix  cabal-902.project  cabal-902.project.freeze  cabal.project  cabal.project.freeze  default.nix  dump-decls.cabal  run-ci.sh  shell-902.nix  shell-982.nix  shell.nix
.github/workflows/: cabal-in-nix-shell.yml  ci.yml
dump-decls-exe/: build.ghc98.nix  default.nix  dump-decls-exe.cabal
dump-decls-exe/exe/: Exe.hs
dump-decls-lib/: build.ghc98.nix  default.nix  dump-decls-lib.cabal
dump-decls-lib/bench/: Main.hs
dump-decls-lib/src/: Compat.hs  Json.hs  JsonNew.hs  Types.hs  Versioned.hs
dump-decls-lib/src/Compat/: Aeson.hs
dump-decls-lib/src/Json/: Migrate.hs  Version3.hs  Version4.hs  Version5.hs
dump-decls-lib/src/Types/: Doodle.hs  Forall.hs
dump-decls-lib/test/unit/: Unit.hs
exe/: Exe.hs
nix/: pkgs.nix  shell-deps-902.nix  shell-deps-982.nix  shell-deps.nix
src/: Json.hs  Types.hs  Versioned.hs
src/Compat/: Aeson.hs  Text.hs
test/: Spec.hs
test/unit/: Unit.hs
