cabal-version:      2.4
name:               dump-decls
version:            0.1.0.0
synopsis:           Dump the declarations of a package.
license:            BSD-3-Clause
author:             Ben Gamari
maintainer:         ben@smart-cactus.org
copyright:          (c) 2023 Ben Gamari

library
    exposed-modules:  Json, Types, Compat.Aeson
    build-depends:    base
                    , containers
                    , aeson
                    , unordered-containers
                    , text
                    , bytestring
                    , deepseq
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall

executable dump-decls
    main-is:          Main.hs
    build-depends:    base, dump-decls, ghc, containers, text, bytestring, exceptions, ghc-paths
    default-language: Haskell2010
    ghc-options:      -Wall
