cabal-version:      2.4
name:               dump-decls
version:            0.1.0.0
synopsis:           Dump the declarations of a package.
license:            BSD-3-Clause
author:             Ben Gamari
maintainer:         ben@smart-cactus.org
copyright:          (c) 2023 Ben Gamari

library
    exposed-modules:  Json, Types, Compat.Aeson
    build-depends:    base
                    , containers
                    , aeson
                    , unordered-containers
                    , text
                    , bytestring
                    , deepseq
                    , utf8-string
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall

library dump-decls-exe
    exposed-modules: Exe
    hs-source-dirs: exe
    build-depends:    base, dump-decls, ghc, containers, text, bytestring, exceptions, ghc-paths

executable dump-decls
    main-is:          Main.hs
    build-depends:    base, dump-decls-exe
    default-language: Haskell2010
    ghc-options:      -Wall

test-suite test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -Wall
  build-depends:
      base
    , dump-decls
    , dump-decls-exe
    , process
    , silently
    , text
    , aeson
    , bytestring
    , hspec-expectations-pretty-diff
    , hspec
    , containers
  default-language: Haskell2010
