cabal-version:      3.0
name:               dump-decls
version:            0.1.0.0
synopsis:           Dump the declarations of a package.
license:            BSD-3-Clause
author:             Ben Gamari
maintainer:         ben@smart-cactus.org
copyright:          (c) 2023 Ben Gamari

library lib
    exposed-modules:  Json, Types, Compat, Compat.Aeson, Compat.Text
    build-depends:    base
                    , containers
                    , aeson
                    , unordered-containers
                    , text
                    , bytestring
                    , deepseq
                    , utf8-string
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall

library dump-decls-exe
    exposed-modules: Exe
    hs-source-dirs: exe
    build-depends:    base, dump-decls:lib, ghc, containers, text, bytestring, exceptions, ghc-paths

executable dump-decls
    main-is:          Main.hs
    build-depends:    base, dump-decls-exe
    default-language: Haskell2010
    ghc-options:      -Wall

-- WORKAROUND: this is really a test suite, but instead we make it an executable
--  so that cabal2nix doesn't try to execute it while building the "lib" library.
-- Since this test suite depends on "dump-decls-exe", it's tied to a specific
--  GHC version, whereas "lib" is not.
-- The correct solution is to split this package into two parts:
--   1. A GHC-interfacing one (components "lib:dump-decls-exe", "exe:dump-decls"); and
--   2. A GHC-agnostic part ("lib" library plus tests)
executable exe-integration-test
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -Wall
  build-depends:
      base
    , dump-decls:lib
    , dump-decls-exe
    , process
    , silently
    , text
    , aeson
    , bytestring
    , hspec-expectations-pretty-diff
    , hspec
    , containers
  default-language: Haskell2010

test-suite doctest
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      test/doctest/
  ghc-options: -Wall
  build-depends:
      base
    , doctest
  default-language: Haskell2010

test-suite unit
  type: exitcode-stdio-1.0
  main-is: Unit.hs
  hs-source-dirs:
      test/unit/
  ghc-options: -Wall
  build-depends:
      base
    , dump-decls:lib
    , hspec
  default-language: Haskell2010
