cabal-version:      3.0
name:               dump-decls-lib
version:            0.1.0.0
synopsis:           Dump the declarations of a package.
license:            BSD-3-Clause
author:             Ben Gamari
maintainer:         ben@smart-cactus.org
copyright:          (c) 2023 Ben Gamari

library
    exposed-modules:  Json, Types, Compat, Compat.Aeson, Compat.Text
    build-depends:    base
                    , containers
                    , aeson
                    , unordered-containers
                    , text
                    , bytestring
                    , deepseq
                    , utf8-string
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall

test-suite doctest
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      test/doctest/
  ghc-options: -Wall
  build-depends:
      base
    , doctest
  default-language: Haskell2010

test-suite unit
  type: exitcode-stdio-1.0
  main-is: Unit.hs
  hs-source-dirs:
      test/unit/
  ghc-options: -Wall
  build-depends:
      base
    , dump-decls-lib
    , hspec
  default-language: Haskell2010

-- TODO: get Nix to include benchmark in bin/ folder
executable benchmark-lib
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: bench/
  build-depends:
      base
    , dump-decls-lib
    , aeson
    , text
    , bytestring
    , criterion
    , file-embed
  default-language: Haskell2010
  ghc-options: -threaded
               -O2
